--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+apps/circuit/circuit
+apps/circuit/*.dot
+apps/circuit/*.pdf
+apps/circuit/*.png
+apps/garbled/garbled
 apps/ot/ot
