--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+*.dot
+*.svg
+*.pdf
+*.png
+*.circ
 apps/circuit/circuit
-apps/circuit/*.dot
-apps/circuit/*.svg
-apps/circuit/*.pdf
-apps/circuit/*.png
-apps/circuit/*.circ
 apps/garbled/garbled
 apps/ot/ot
