--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,6 +19,9 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
 
+    - name: Prepare repository
+      run: git checkout "${GITHUB_REF:11}"
+
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
