--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,10 +17,9 @@ jobs:
       id: go
 
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
-
-    - name: Prepare repository
-      run: git checkout "${GITHUB_REF:11}"
+      - uses: actions/checkout@v2
+        with:
+          ref: topic/streaming
 
     - name: Get dependencies
       run: |
