--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,9 +17,9 @@ jobs:
       id: go
 
     - name: Check out code into the Go module directory
-      - uses: actions/checkout@v2
-        with:
-          ref: topic/streaming
+      uses: actions/checkout@v2
+      with:
+        ref: topic/streaming
 
     - name: Get dependencies
       run: |
