--- a/apps/garbled/GNUmakefile
+++ b/apps/garbled/GNUmakefile
@@ -7,8 +7,13 @@ ssas := $(patsubst %.mpcl,%.ssa,$(programs))
 dots := $(patsubst %,%.dot,$(circs) $(mpclcs) $(bristols) $(ssas))
 svgs := $(patsubst %.dot,%.svg,$(dots))
 
-all:
-	@echo $(svgs)
+generated_dots := $(wildcard examples/*.dot)
+generated_svgs := $(patsubst %.dot,%.svg,$(generated_dots))
+
+all: $(generated_svgs)
+
+%.svg: %.dot
+	dot -Tsvg $+ > $@
 
 clean:
 	@rm -f $(circs) $(mpclcs) $(bristols) $(ssas) $(dots) $(svgs)
