--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,14 +10,14 @@ jobs:
         os: [ubuntu-latest, macos-latest]
     steps:
 
-    - name: Set up Go 1.25
-      uses: actions/setup-go@v1
+    - name: Set up Go
+      uses: actions/setup-go@v4
       with:
         go-version: 1.25
       id: go
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+    - name: Check out code
+      uses: actions/checkout@v4
 
     - name: Get dependencies
       run: |
